@startuml

title __CHARTS's Class Diagram__\n

  namespace es.ull {
    namespace charts {
      class es.ull.charts.BarChartStrategy {
          ~ chartTitle : String
          ~ etiqueta : String
          - country : String
          - grafica : JPanel
          - trendsList : HashMap<String, Integer>
          + BarChartStrategy()
          + buildChart()
          + createDataset()
          + getChartPanel()
      }
    }
  }
  

  namespace es.ull {
    namespace charts {
      class es.ull.charts.GraphicContext {
          + GraphicContext()
          + buildChart()
          + createDataset()
          + getChartPanel()
          + setStrategy()
      }
    }
  }
  

  namespace es.ull {
    namespace charts {
      interface es.ull.charts.IChartStrategy {
          {abstract} + buildChart()
          {abstract} + createDataset()
          {abstract} + getChartPanel()
      }
    }
  }
  

  namespace es.ull {
    namespace charts {
      class es.ull.charts.LineChartStrategy {
          ~ chartTitle : String
          ~ etiqueta : String
          - grafica : JPanel
          + LineChartStrategy()
          + buildChart()
          + createDataset()
          + getChartPanel()
      }
    }
  }
  

  namespace es.ull {
    namespace charts {
      class es.ull.charts.PieChartStrategy {
          ~ chartTitle : String
          ~ etiqueta : String
          - grafica : JPanel
          + PieChartStrategy()
          + buildChart()
          + createDataset()
          + getChartPanel()
      }
    }
  }
  

  es.ull.charts.BarChartStrategy .up.|> es.ull.charts.IChartStrategy
  es.ull.charts.BarChartStrategy -up-|> org.jfree.ui.ApplicationFrame
  es.ull.charts.GraphicContext -up-|> org.jfree.ui.ApplicationFrame
  es.ull.charts.GraphicContext o-- es.ull.charts.IChartStrategy : myIChartStrategy
  es.ull.charts.LineChartStrategy .up.|> es.ull.charts.IChartStrategy
  es.ull.charts.LineChartStrategy -up-|> org.jfree.ui.ApplicationFrame
  es.ull.charts.PieChartStrategy .up.|> es.ull.charts.IChartStrategy
  es.ull.charts.PieChartStrategy -up-|> org.jfree.ui.ApplicationFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
